@@ -4,6 +4,7 @@ Changelog
 - CHANGE: Dynamic Texture blocks now require a default item
 - CHANGE: Config files will now go in a subdirectory for each mod
 - FIXED: Capability-related crash with Integrated Dynamics
+- FIXED: Crash following an AbstractMethodException due to classes implementing both IInventory and IItemHandler
 
 2.0.4
 - ADDED: Player Animation Module
